Add ability to attach files by dropping links from the same page

--- a/src/lib/static/css/futaba.css
+++ b/src/lib/static/css/futaba.css
@@ -270,8 +270,8 @@ span.newPostCount {
     color: #789922;
 }
 
-.ratingSelectContainer {
-    display: block;
+.fileByLinkButton {
+    cursor: pointer;
 }
 
 /*
