--- a/src/lib/static/css/photon.css
+++ b/src/lib/static/css/photon.css
@@ -276,8 +276,8 @@ span.newPostCount {
     color: #789922;
 }
 
-.ratingSelectContainer {
-    display: block;
+.fileByLinkButton {
+    cursor: pointer;
 }
 
 /*
