Improve timezone handling

--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -213,7 +213,7 @@
                     <td>
                         <%= timeLabelText %>
                     </td>
-                    <td>
+                    <td class="nowrap">
                         <select name="timeChangeSelect" class="select">
                             <% if ( content.currentTime == "local" ) %>
                                 <option value="server"><%= timeServerText %></option>
@@ -223,6 +223,8 @@
                                 <option value="local"><%= timeLocalText %></option>
                             <% end %>
                         </select>
+                        <%= timeZoneOffsetLabelText %>
+                        <input type="number" name="timeZoneOffset" min="-720" max="840" />
                     </td>
                 </tr>
                 <tr>
