Add ability to attach files by URL

--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -739,8 +739,8 @@
                                         </select>
                                         <img src="/<%= sitePathPrefix %>img/question.png" title="<%= ratingTooltip %>">
                                     </span>
-                                    <!--a onclick="lord.attachFileByLink(this); return lord.preventOnclick(event);"
-                                       class="fileByLinkButton"><%= attachFileByLinkText %></a-->
+                                    <a onclick="lord.attachFileByLink(this); return lord.preventOnclick(event);"
+                                       class="fileByLinkButton"><%= attachFileByLinkText %></a>
                                 </div>
                             </div>
                         <% else %>
