--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -299,5 +299,6 @@
         <file>static/img/r-15.png</file>
         <file>static/img/r-18.png</file>
         <file>static/img/r-18g.png</file>
+        <file>static/img/catalog.png</file>
     </qresource>
 </RCC>
