Implement RSS feed

--- a/src/lib/template/11_board.tmpl
+++ b/src/lib/template/11_board.tmpl
@@ -99,6 +99,8 @@
                          title="<%= boardRulesLinkText %>"><img src="/<%= sitePathPrefix %>img/question.png"></a>]</sup>
                 <sup>[<a href="/<%= sitePathPrefix %><%= currentBoard.name %>/catalog.html"
                          title="<%= boardCatalogLinkText %>"><img src="/<%= sitePathPrefix %>img/catalog.png"></a>]</sup>
+                <sup>[<a href="/<%= sitePathPrefix %><%= currentBoard.name %>/rss.xml" target="_blank"
+                         title="<%= boardRssLinkText %>"><img src="/<%= sitePathPrefix %>img/rss.png"></a>]</sup>
             </h1>
         </div>
         <% if ( content.postingEnabled ) %>
