--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -300,5 +300,6 @@
         <file>static/img/r-18.png</file>
         <file>static/img/r-18g.png</file>
         <file>static/img/catalog.png</file>
+        <file>static/img/rss.png</file>
     </qresource>
 </RCC>
