--- a/src/lib/static/css/futaba.css
+++ b/src/lib/static/css/futaba.css
@@ -588,6 +588,10 @@ span.newPostCount {
     filter: alpha(opacity=100);
 }
 
+.postToThread > a > button {
+    font-size: 1.2em;
+}
+
 .desktop.postActions > a, .desktop.postActions > form {
     display: none;
 }
@@ -643,8 +647,21 @@ span.newPostCount {
     color: #CC1105;
 }
 
+.postSubject.mobile {
+    font-size: 0.8em;
+    display: block;
+}
+
 .tripcode {
     color: green;
+}
+
+.tripcode.mobile {
+    font-size: 0.8em;
+}
+
+.postDateTime.mobile {
+    font-size: 0.8em;
 }
 
 .moderName {
@@ -655,6 +672,10 @@ span.newPostCount {
 .userName {
     font-weight: bold;
     color: #117743;
+}
+
+.someName.mobile {
+    font-size: 0.8em;
 }
 
 .navigationButton {
