--- a/src/lib/template/markup.tmpl
+++ b/src/lib/template/markup.tmpl
@@ -49,15 +49,25 @@
             <br />
             [u]<u><%= underlinedText %></u>[/u]
             <br /><br />
-            `<font face="monospace"><%= singleMonospace %></font>`
+            ``<font face="monospace"><%= monospace %></font>``
             <br />
-            [q]<font face="monospace"><%= singleMonospace %></font>[/q]
+            [m]<font face="monospace"><%= monospace %></font>[/m]
             <br /><br />
-            ``<font face="monospace"><%= doubleMonospace %></font>``
+            ''[b]<%= nomarkup %>[/b]''
+            <br />
+            [n]**<%= nomarkup %>**[/n]
+            <br /><br />
+            ``<font face="monospace"><%= monospaceEscaped %></font>``
+            <br /><br />
+            ''[b]<%= nomarkupEscaped %>[/b]''
             <br /><br />
             /--pre
             <pre><%= preformattedText %></pre>
             \--
+            <br /><br />
+            [pre]
+            <pre><%= preformattedText %></pre>
+            [/pre]
             <br /><br />
             %%<span class="spoiler"><%= spoiler %></span>%%
             <br />
@@ -72,9 +82,9 @@
             <br /><br />
             [tooltip value="<%= tooltip %>"]<span class="tooltip" title="<%= tooltip %>"><%= tooltipText %></span>[/tooltip]
             <br /><br />
-            %%_**<span class="spoiler"><i><b><%= combinedText %></b></i></span>**_%%
+            %%_[b]<span class="spoiler"><i><b><%= combinedText %></b></i></span>[/b]_%%
             <br />
-            [spoiler][i][b]<span class="spoiler"><i><b><%= combinedText %></b></i></span>[/b][/i][/spoiler]
+            [spoiler][i]**<span class="spoiler"><i><b><%= combinedText %></b></i></span>**[/i][/spoiler]
             <br /><br />
             <span class="quotation">&gt;<%= quotation %></span>
             <br /><br />
@@ -96,7 +106,9 @@
             <br /><br />
             [url]example1.com[/url], ([url]example2.com[/url]) —&gt; <a href="http://example.com">example1.com</a>, (<a href="http://example.com">example2.com</a>)
             <br /><br />
-            user@example.com —&gt; <a href="mailto:user@example.com">user@example.com</a>
+            mailto:user@example.com —&gt; <a href="mailto:user@example.com">user@example.com</a>
+            <br /><br />
+            irc:#some_channel —&gt; <a href="irc:#some_channel">#some_channel</a>
         </div>
         <div class="sectionHeader">
             <h3><%= replacementMarkup %></h3>
@@ -110,11 +122,11 @@
             <h3><%= codeMarkup %></h3>
         </div>
         <div class="rules">
+            /--code c++<br />static const int = 0;<br />\--
+            <br /><br />
             [code lang=&quot;cpp&quot;]static const int x = 0;[/code]
             <br /></br />
             [c++]static const int x = 0;[/c++]
-            <br /><br />
-            /--code c++<br />static const int = 0;<br />\--
             <br />
             <div class="codeBlock"><pre><tt><b><font color="#0000FF">static</font></b> <b><font color="#0000FF">const</font></b> <font color="#009900">int</font> x <font color="#990000">=</font> <font color="#993399">0</font><font color="#990000">;</font></tt></pre></div>
         </div>
@@ -122,16 +134,12 @@
             <h3><%= listMarkup %></h3>
         </div>
         <div class="rules">
-            <%= listDescription %>
-            <br />
             <table>
                 <tr>
                     <td>
-                        * <%= listItem1 %>
-                        <br />
-                        * <%= listItem2 %>
-                        <br />
-                        * <%= listItem3 %>
+                        [ul type="disc"][li]<%= listItem1 %>[/li]
+                        <br />[li]<%= listItem2 %>[/li]
+                        <br />[li]<%= listItem3 %>[/li][/ul]
                     </td>
                     <td>
                         <ul type="disc">
@@ -143,11 +151,15 @@
                 </tr>
                 <tr>
                     <td>
-                        + <%= listItem1 %>
+                        [ul type=circle]
                         <br />
-                        + <%= listItem2 %>
+                        [li]<%= listItem1 %>[/li]
                         <br />
-                        + <%= listItem3 %>
+                        [li]<%= listItem2 %>[/li]
+                        <br />
+                        [li]<%= listItem3 %>[/li]
+                        <br />
+                        [/ul]
                     </td>
                     <td>
                         <ul type="circle">
@@ -159,11 +171,15 @@
                 </tr>
                 <tr>
                     <td>
-                        - <%= listItem1 %>
+                        [ul type=s]
                         <br />
-                        - <%= listItem2 %>
+                        [li]<%= listItem1 %>[/li]
                         <br />
-                        - <%= listItem3 %>
+                        [li]<%= listItem2 %>[/li]
+                        <br />
+                        [li]<%= listItem3 %>[/li]
+                        <br />
+                        [/ul]
                     </td>
                     <td>
                         <ul type="square">
@@ -175,11 +191,15 @@
                 </tr>
                 <tr>
                     <td>
-                        1. <%= listItem1 %>
+                        [ol]
                         <br />
-                        2. <%= listItem2 %>
+                        [li value=1]<%= listItem1 %>[/li]
                         <br />
-                        5. <%= listItem3 %>
+                        [li]<%= listItem2 %>[/li]
+                        <br />
+                        [li value=5]<%= listItem3 %>[/li]
+                        <br />
+                        [/ol]
                     </td>
                     <td>
                         <ol>
