Add ability to select action when posting in thread

--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -427,6 +427,14 @@
                     </tr>
                     <tr>
                         <td>
+                            <%= moveToPostOnReplyInThreadLabelText %>
+                        </td>
+                        <td>
+                            <input type="checkbox" name="moveToPostOnReplyInThread" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
                             <%= checkFileExistenceLabelText %>
                         </td>
                         <td>
